[package]
name = "ic_test_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
candid = "0.7.8"
serde = "1.0.131"
serde_bytes = "0.11"
ic_common = { path = "../ic_common" }
log = "0.4"
env_logger = "0.9.0"
async-trait = "0.1.51"
rstest = "0.11.0"
